<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>genstar.template</groupId>
	<artifactId>template</artifactId>
	<version>1.0.1</version>

	<dependencies>
		<dependency>
			<groupId>org.genstar</groupId>
			<artifactId>genstar-core</artifactId>
			<version>1.0.3</version>
		</dependency>
		<dependency>
			<groupId>org.genstar</groupId>
			<artifactId>genstar-spll</artifactId>
			<version>1.0.3</version>
		</dependency>
		<dependency>
			<groupId>org.genstar</groupId>
			<artifactId>genstar-spin</artifactId>
			<version>1.0.3</version>
		</dependency>
		<dependency>
			<groupId>org.genstar</groupId>
			<artifactId>genstar-gospl</artifactId>
			<version>1.0.3</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<id>bintray-anrgenstar-genstar-packages</id>
			<name>bintray</name>
			<url>http://dl.bintray.com/anrgenstar/genstar-packages</url>
		</repository>
	</repositories>
</project>
